# atomic-habits

./: .env.sample  .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
habits/: models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_reward.py  0003_habit_doing_alter_habit_duration_and_more.py  0004_alter_habit_options_alter_habit_related_habit.py  0005_alter_habit_related_habit.py  0006_alter_habit_time.py
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
